[project]
name = "mcppadex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
    "web3>=7.0.0",
    "eth-account>=0.13.0",
    "eth-abi>=5.0.0,<6.0.0",
    "python-dotenv>=1.0.0",
    "cosmpy>=0.9.0",
    "bech32>=1.2.0",
    "ecdsa>=0.18.0",
    "requests>=2.31.0",
]
